<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#333333">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_icon" />

    <TextView
        android:id="@+id/sideload_he"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sideload_he"
        android:textAppearance="@style/sideload_he" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="294dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome_text"
        android:textAppearance="@style/welcome_text" />

    <Button
        android:id="@+id/button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="374dp"
        android:text="@string/browse_files"
        android:textSize="14sp"
        app:backgroundTint="#F9A285" />

    <TextView
        android:id="@+id/made_with_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/made_with_love"
        android:textAppearance="@style/made_with_love"
        android:gravity="center_horizontal|bottom"
        />


</RelativeLayout>